# csc-chatbot

./: .env.sample  .gitignore  .pre-commit-config.yaml  Makefile  README.md  config.yml  pyproject.toml  requirements.txt  tox.ini
data/: csc.yml
scripts/: clean.sh  print_make_help.py  run_tests.sh
src/chatbot/: __main__.py  chat.py  cli.py  config.py  memory.py  utils.py
src/chatbot/cli/: __init__.py  app.py  constants.py  custom_decorators.py
tests/: conftest.py
tests/integration/: test_cli.py
tests/unit/: test_config.py  test_custom_decorator.py  test_utils.py
