[tool.poetry]
name = "chatbot"
version = "0.2.0"
description = "The CSC AI assistant"
authors = ["Matteo Spanio <spanio@dei.unipd.it>"]
readme = "README.md"
packages = [{include = "chatbot", from = "src"}]

[tool.poetry.scripts]
chatbot = "chatbot.cli.app:chatbot"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
langchain = "^0.1.16"
langchain-openai = "^0.1.4"
python-dotenv = "^1.0.1"
beautifulsoup4 = "^4.12.3"
pyyaml = "^6.0.1"
langchain-chroma = "^0.1.0"
click = "^8.1.7"
rich = "^13.7.1"
pypdf = "^4.2.0"
click-extra = "^4.7.5"
toml = "^0.10.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.2"
pre-commit = "^3.7.0"
docformatter = "^1.7.5"
black = "^24.4.2"
pytest = "^8.2.0"
hypothesis = "^6.100.4"
pytest-cov = "^5.0.0"
tox = "^4.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "--color=yes",
    "--doctest-modules",
    "--verbose",
    "--import-mode=importlib",
]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
show_missing = true
omit = [
    "**/__init__.py",
    "**/__main__.py",
    "**/constants.py",
]
exclude_lines = [
    "pragma: no cover",
    "except OSError",
    "def __repr__",
    "def __str__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
]

[tool.docformatter]
recursive = true
wrap-summaries = 88
blank = true

[tool.ruff]
line-length = 88
src = ["src", "tests"]
extend-exclude = ["docs", "scripts"]
target-version = "py310"

[tool.ruff.lint]
select =[
    "A",    # builtins
    "B",    # bugbear
    "BLE",  # blind exception
    "C4",   # comprehensions
    "C90",
    "COM",  # commas
    "D",    # pydocstyle
    "DTZ",  # datetime
    "E",    # pycodestyle
    "EM",   # error messages
    "F",    # pyflakes
    "G",    # logging
    "I",    # isort
    "PIE",  # flake-8 pie
    "PL",   # pylint
    "PT",   # pytest
    "PTH",  # use pathlib
    "N",    # pep-naming
    "RUF",  # ruff specific rules
    "S",    # bandit
    "SIM",  # flake8-simplify
    "UP",   # pyupgrade
    "W",    # pycodestyle warning
]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["D", "RUF", "S", "A", "PLR6301", "PLR2004"]
"**/__main__.py" = ["D"]
"**/__init__.py" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
ignore-decorators = ["typing.overload"]

[tool.ruff.lint.pylint]
max-args = 6
max-returns = 5

[tool.black]
color = true
line-length = 88
target-version = ["py310"]
extend-exclude = '''
(
  ^/docs/.*$   # exclude docs
  | .*_pb2.py  # exclude autogenerated protobuf files
)
'''
